<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.bechberger</groupId>
    <artifactId>jfr-query-experiments</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <jooq.version>3.20.6</jooq.version>
        <duckdb.version>1.3.2.1</duckdb.version>
    </properties>

    <build>
        <finalName>query</finalName>
        <plugins>
            <!-- Add your plugins here -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <!-- Configure the compiler plugin, add exports -->
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.org.objectweb.asm.commons=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.org.objectweb.asm.util=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.event=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.org.xml.sax=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.util.xml=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.util.xml.impl=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.org.xml.sax.helpers=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.jfr/jdk.jfr.internal=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.jfr/jdk.jfr.events=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.module=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/jdk.internal.org.objectweb.asm.commons=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/jdk.internal.org.objectweb.asm.util=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/jdk.internal.event=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/jdk.internal.org.xml.sax=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/jdk.internal.util.xml=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/jdk.internal.util.xml.impl=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/jdk.internal.org.xml.sax.helpers=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>jdk.jfr/jdk.jfr.internal=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/jdk.internal.module=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>jdk.jfr/jdk.jfr.events=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <appendAssemblyId>false</appendAssemblyId>
                    <archive>
                        <manifestEntries>
                            <Main-Class>me.bechberger.Main</Main-Class>
                        </manifestEntries>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>all-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <argLine>
                        --add-opens jdk.jfr/jdk.jfr.consumer=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>4.7.7</version>
        </dependency>
        <dependency>
            <groupId>org.duckdb</groupId>
            <artifactId>duckdb_jdbc</artifactId>
            <version>${duckdb.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq</artifactId>
            <version>${jooq.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-db</artifactId>
            <version>3.0.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.27.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.jakewharton.fliptables</groupId>
            <artifactId>fliptables</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.13.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.13.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>